plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.hibernate.orm' version '6.6.11.Final'
	id 'org.graalvm.buildtools.native' version '0.10.6'
}

group = 'io.goorm'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot Starter (핵심 의존성)
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// Spring Boot Extension (부가 기능)
	implementation 'org.springframework.boot:spring-boot-starter-validation' // Bean Validation
	implementation 'org.springframework.boot:spring-boot-starter-data-redis' // Redis

	// 외부 연동 도구
	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6"
	implementation 'org.springframework.boot:spring-boot-starter-actuator'// Swagger UI

	// 데이터베이스 드라이버
	runtimeOnly 'org.postgresql:postgresql'

	// JWT (토큰 인증)
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	//WebClient
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// WebSocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// 개발 도구
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// 테스트 의존성
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

hibernate {
	enhancement {
		enableAssociationManagement = true
	}
}

tasks.named('test') {
	useJUnitPlatform()
}